agrego mas correciones

--- a/tp2/informe/caratula.tex
+++ b/tp2/informe/caratula.tex
@@ -1,5 +1,5 @@
-\titulo{Trabajo Práctico \#2 }
-\fecha{5 de Noviembre de 2016}
+\titulo{Reentrega - Trabajo Práctico \#2 }
+\fecha{12 de Diciembre de 2016}
 \materia{Base de Datos}
 
 \integrante{Pedro Rodriguez}{197/12}{pedro3110.jim@gmail.com}
